Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23817

#ifndef X not greying out code correctly compared to #if !defined(X)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 4.11.1
    • C/C++/Obj-C++ Support
    • None
    • Debian Linux using Qt on-line installer Qt Creator
    • Linux/X11

    Description

      The code greying-out does not behave correctly for the #ifndef ... preprocessor item. in the attached screen-shot QT_NO_SSL has been defined (by me, to exercise that part of our project's code-base, even though we DO have SSL libraries available) note the difference in the two views compared to the #if !defined(...) version - when, given that the item IS defined, they should be the same. This only applies to the #ifndef form, the inverse (normal) #ifdef ... form greys the code out correctly. Indeed I found that if I put in an #else part that does adopts the opposite greyed/ungreyed out state compared to the #ifXXX part - but the action is reversed for the #ifndef one compared to what it should be...

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kosjar Nikolai Kosjar
            slysven Stephen Lyons
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes